# OcrLiteOnnxLibTest

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
OcrLib/: OcrLibWrapper.cmake
OcrLib/Darwin-CLIB/: OcrLibConfig.cmake
OcrLib/win-CLIB-Win32/: OcrLibConfig.cmake
include/: maintest.h
resource/: run-test.bat  run-test.sh
src/: maintest.cpp
